update footer white space issue

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,5 +1,22 @@
 @import "../css/data/styles.css";
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--background-color);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--secondary-color);
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--link-color);
+}
+
 .App {
   font: var(--primary-font);
 }
@@ -52,7 +69,7 @@
     top: 0;
     bottom: 0;
     width: calc((100% - 1200px) / 2);
-    z-index: 1;
+    background-color: var(--background-color);
   }
 
 .page-content:before {
@@ -67,10 +84,9 @@
     z-index: 1;
   }
 
-
 .page-footer {
   position: relative;
-  margin-top: 10%;
+  margin-top: auto;
 }
 
 .page-footer::before {
