--- a/src/css/about.css
+++ b/src/css/about.css
@@ -54,7 +54,3 @@
 	padding-top: 50px;
 	padding-bottom: 50px;
 }
-
-.page-footer {
-  margin: -2% !important;
-}
