--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -26,7 +26,7 @@
 
 .footer-nav-link-item {
 	font-weight: bold;
-	font-size: 100%;
+	font-size: 80%;
 }
 
 .footer-nav-link-list a {
