--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -11,7 +11,6 @@
 	height: 100%;
 	margin: 0;
 	padding-top: 120px;
-	margin-bottom: 150px;
 }
 
 @media (max-width: 600px) {
